- pngwolf - http://bjoern.hoehrmann.de/pngwolf
- rehuff - http://wiki.xiph.org/Rehuff
- tidy-html5 4.9.26-191-gb4efe74 - http://www.paehl.com/open_source/?HTML_Tidy_for_HTML5
- TruePNG 0.6.1.8 - http://x128.ho.ua/pngutils.html
- ZLib 1.2.8 - http://www.zlib.net
- zRecompress 2.12 - http://nikkhokkho.sourceforge.net/static.php?page=zRecompress


XXXXX - YYYYYYY
- Better High DPI compatibility.
- Cleanedup JPEG options page glitches (d4k0).
- Delay load shcore.dll to avoid a C++ Builder bug on WINE (trlkly).


8.10 - 2015/12/26
- Enhanced GZ, JPEG and PNG compression by adding ECT 0.1 by Felix Hanau.
- Fixed Windows 10 theme (d4k0).
- Workedarround a bug in C++ Builder Seattle that made executables require BORLANDMM.DLL -https://forums.embarcadero.com/thread.jspa?messageID=706835- (d4k0).
- Fixed a problem with disabled menu items after optimization (d4k0).

8.00 - 2015/12/25
- Added Windows 10 theme, enabled by default on Windows 10 or later.
- Prevented missing BTHPROPS.CPL and BLUETOOTHAPIS.DLL error on Wine by making them delay loaded on Win32 binaries to overcome C++ Builder XE7 bug (trlkly).
- Removed custom window frame, because it was always looked black with C++ Builder 10.
- Made check for updates detect faulty routers and switches returning HTML content when no valid data connection exists (Armin Mueller).
- Added INI option TempDirectory="" to specify FileOptimizer temporary folder to use. If empty, it will use system defaults. Set it to a fast SSD drive or ramdisk to increase performance (Newtomic).
- Prevented Windows message about "Program not responding" when adding lots of files (Zulfikar Raditya Hernanta).
- Upgraded to Ghostcript 9.18.
- Updated ImageMagick to 7.0.0.0 with HDRI support.
- Updated pngquant to 2.5.1.
- Updated Leanify to 0.4.3.
- Updated TruePNG to 0.6.1.8.
- Updated tidy-html5 to 4.9.26-191-gb4efe74 patched to be Windows XP compatible.
- Updated libwebp to 0.4.4.
- Updated ImageWorsener to 1.3.0.
- Updated to cppcheck 1.71.